[gd_scene load_steps=11 format=2]

[ext_resource path="res://Autoloads/SceneTransistor.gd" type="Script" id=1]
[ext_resource path="res://Art/Sound/POL-misty-dungeon-short.wav" type="AudioStream" id=2]
[ext_resource path="res://Art/SoundEffects/short-success-sound-glockenspiel-treasure-video-game-6346.mp3" type="AudioStream" id=3]
[ext_resource path="res://Art/SoundEffects/success-1-6297.mp3" type="AudioStream" id=4]
[ext_resource path="res://Art/SoundEffects/failure-drum-sound-effect-2-7184.mp3" type="AudioStream" id=5]
[ext_resource path="res://Art/SoundEffects/trad_kick_48_B.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackgroundMusic:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "change_scene"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.1, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_scene"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BackgroundMusic:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Art/Font/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[node name="SceneTransistor" type="CanvasLayer"]
layer = 3
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/change_scene = SubResource( 2 )

[node name="TextLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="PickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="LoseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
